# S.A.K.-Utility

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .vsignore  BUILD.md  BUILD_FAILURE_ANALYSIS.md  CHANGELOG.md  CLEANUP_REALITY_CHECK.md  CMakeLists.txt  CONTRIBUTING.md  ENTERPRISE_ENHANCEMENT_TRACKING.md  IMAGE_FLASHER_PANEL_PLAN.md  IMAGE_FLASHER_REALITY_CHECK.md  LICENSE  LINUX_ISO_DOWNLOADER_PLAN.md  NETWORK_TRANSFER_PLAN.md  OS_DOWNLOADER_IMPLEMENTATION_CHECKLIST.md  PXE_BOOT_PANEL_PLAN.md  QUICK_ACTIONS_PANEL_PLAN.md  QUICK_ACTIONS_STATUS.md  README.md  REALITY_CHECK_REPORT.md  TEST_COVERAGE_ANALYSIS.md  THIRD_PARTY_LICENSES.md  VERIFICATION_REPORT.md  VERSION_MANAGEMENT.md  WINPE_BOOTABLE_PLAN.md  build_output.txt  cppcheck_suppressions.txt  debug_check.py  fix_actions.ps1  package_mappings.json  portable.ini  requirements.txt  run_windows_backup.bat  sak_utility.exe.manifest  (+2 more)
.github/: copilot-instructions.md
cmake/: copy_tools_bundle.cmake  version.h.in
docs/: A2_CLOUD_CERT_PLAYBOOK.md  ADVANCED_SEARCH_PANEL_PLAN.md  ADVANCED_UNINSTALL_PANEL_PLAN.md  AI_ASSISTANT_MANUAL_QA_RUNBOOK.md  AI_ASSISTANT_PANEL_PLAN.md  AI_ASSISTANT_PRODUCTION_SMOKE_TESTS.md  AI_MULTI_AGENT_WORKFLOW_PLAN.md  APFS_A2_CAB_TIER_DESIGN.md  APFS_A2_CRASH_SAFETY_DESIGN.md  APFS_A2_INPLACE_COMMIT_GROUND_TRUTH.md  APFS_A2_MULTI_LEAF_FSTREE_DESIGN.md  APFS_A2_OVERFLOW_REPEATED_COMMIT_DESIGN.md  APFS_HFS_FULL_DRIVER_WRITE_PLAN.md  BUNDLED_TOOLS.md  CODEBASE_AUDIT_TRACKER.md  CODE_DUPLICATION_AUDIT.md  DIAGNOSTIC_BENCHMARKING_PANEL_PLAN.md  EMAIL_PANEL_PLAN.md  ENTERPRISE_HARDENING_TRACKER.md  FILE_CONVERTER_TAB_PLAN.md  FILE_MANAGEMENT_EXPLORER_FILES_LIKE_PLAN.md  ISO_DOWNLOADER_WAF_FIX.md  MACOS_BOOTABLE_USB_PLAN.md  NETWORK_DIAGNOSTIC_PANEL_PLAN.md  NETWORK_TRANSFER.md  OFFLINE_DEPLOYMENT_PANEL_PLAN.md  OST_CONVERTER_TAB_PLAN.md  PARTITION_MANAGER_CERTIFICATION.md  PARTITION_MANAGER_CERTIFICATION_MATRIX.json  PARTITION_MANAGER_CROSS_FILESYSTEM_PLAN.md  PARTITION_MANAGER_PANEL_PLAN.md  PRODUCTION_GRADE_AUDIT.md  PRODUCTION_READINESS_PLAN.md  PXE_BOOT_PANEL_PLAN.md  QUICK_ACTIONS_IMPLEMENTATION.md  RELEASE_READINESS.md  SECURITY_THREAT_MODEL.md  SYSTEM_TOOLS_TAB_PLAN.md  TEST_COVERAGE_GAP_ANALYSIS.md  TIGERSTYLE_COMPLIANCE_PLAN.md  (+1 more)
resources/: ai.qrc  icon.icns  icons.qrc  sak_elevated_helper.manifest  sak_utility.manifest.in  sak_utility.rc.in
scripts/: ai_smoke_checklist.ps1  bundle_chocolatey.ps1  bundle_iperf3.ps1  bundle_mcp_servers.ps1  bundle_smartmontools.ps1  bundle_uup_tools.ps1  bundle_vcpkg_runtime.ps1  check_accessibility_patterns.ps1  check_blocking_patterns.ps1  check_gui_magic_numbers.ps1  check_gui_style_tokens.ps1  check_gui_stylesheet_literals.ps1  check_logged_message_boxes.ps1  check_magic_numbers.py  check_partition_filesystem_tool_manifest.ps1  check_partition_manager_certification_bundle.ps1  check_partition_manager_certification_gap_report.ps1  check_partition_manager_certification_matrix_integrity.ps1  check_partition_manager_commercial_gate_matrix.ps1  check_partition_manager_external_checklist.ps1  check_partition_manager_external_lab_package.ps1  check_partition_manager_feature_matrix.ps1  check_partition_manager_release_claims.ps1  check_partition_manager_vhd_preflight_report.ps1  check_powershell_syntax.ps1  check_qrc_resources.ps1  check_release_readiness.ps1  check_third_party_licenses.ps1  create-release-tag.ps1  create_release_archive.ps1  create_signing_catalog.ps1  fix_assertions.py  get_partition_manager_certification_status.ps1  launch_ai_assistant_vm_smoke_local.ps1  launch_partition_manager_apfs_raw_format_validation_local.ps1  launch_partition_manager_bitlocker_mutation_external_gate_elevated.cmd  launch_partition_manager_bitlocker_mutation_external_gate_local.cmd  launch_partition_manager_bitlocker_mutation_external_gate_local.ps1  launch_partition_manager_ext_filesystem_vm_gate_local.ps1  (+79 more)
src/: main.cpp
src/ai/: ai_paths.cpp  (+39 more)
tests/: CMakeLists.txt  README.md  test_app_migration_panel.cpp  test_app_migration_worker.cpp  test_app_scanner.cpp  test_backup_wizard.cpp  test_choco_install.cpp  test_chocolatey_manager.cpp  test_integration_phase1_2.cpp  test_migration_report.cpp  test_package_matcher.cpp  test_restore_wizard.cpp  test_user_data_manager.cpp
tests/certification/: file_management_live_certifier.cpp  partition_file_recovery_certifier.cpp  partition_filesystem_probe_certifier.cpp
tests/integration/: test_backup_workflow.cpp  test_mac_ua_download.cpp  test_migration_workflow.cpp  test_network_transfer_workflow.cpp  test_offline_package_builder.cpp  test_ost_integration.cpp  test_uup_conversion_pipeline.cpp
tests/unit/: test_action_factory.cpp  test_active_connections_monitor.cpp  test_advanced_search_controller.cpp  test_advanced_search_types.cpp  test_advanced_search_worker.cpp  test_advanced_uninstall_controller.cpp  test_advanced_uninstall_types.cpp  test_ai_app_action_planner.cpp  test_ai_cancellation_token.cpp  test_ai_chat_title.cpp  test_ai_command_guard.cpp  test_ai_command_tool_planner.cpp  test_ai_conversation_store.cpp  test_ai_execution_broker.cpp  test_ai_human_gate_store.cpp  test_ai_mcp_http_client.cpp  test_ai_mcp_stdio_client.cpp  test_ai_offline_downloader_tool_runner.cpp  test_ai_orchestrator.cpp  test_ai_package_selection.cpp  test_ai_package_tool_planner.cpp  test_ai_prompt_assembler.cpp  test_ai_provider_gateway.cpp  test_ai_provider_registry.cpp  test_ai_recovery_policy.cpp  test_ai_run_state.cpp  test_ai_run_state_store.cpp  test_ai_subagent_runner.cpp  test_ai_token_usage_tracker.cpp  test_ai_tool_call_router.cpp  test_ai_tool_dispatcher.cpp  test_ai_tool_health_ledger.cpp  test_ai_tool_policy.cpp  test_ai_tool_result_recorder.cpp  test_ai_tool_turn.cpp  test_ai_trace_store.cpp  test_ai_transcript_view.cpp  test_ai_workflow_clarifier.cpp  test_ai_workflow_evals.cpp  test_ai_workflow_powershell_tool_runner.cpp  (+177 more)
tests/unit/actions/: test_action_factory.cpp  test_all_actions_metadata.cpp  test_backup_browser_data_action.cpp  test_disk_cleanup_action.cpp
(+866 files in other folders)
